name:                RockAnts
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/RockAnts#readme>
homepage:            https://github.com/lehins/RockAnts
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RockAnts
                     , RockAnts.Types
                     , RockAnts.Model
                     , RockAnts.Grid
                     , RockAnts.Random
                     , RockAnts.Run
  build-depends:       base            >= 4.8 && < 5
                     , massiv          >= 0.3.2
                     , massiv-io
                     , primitive
                     , mwc-random
                     , rio
                     , scheduler

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints



test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , LibSpec
                    , Spec
  build-depends:      base             >= 4.8 && < 5
                    , hspec
                    , QuickCheck
                    , massiv
                    , RockAnts

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

executable RockAnts
  main-is: Main.hs
  other-modules:
      Paths_RockAnts
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base
                    , RockAnts
  default-language: Haskell2010



source-repository head
  type:     git
  location: https://github.com/lehins/RockAnts
